force-app/main/default/objects/sugati__HE_Question_Categories__c/sugati__HE_Question_Categories__c.object-meta.xml
<CustomObject>
    <label>Enquiry Question Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquiry Question Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>