force-app/main/default/objects/sugati__HE_Question_Categories__c/fields/sugati__QC_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__QC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>