force-app/main/default/objects/sugati__HE_Question_Categories__c/fields/sugati__QC_For_Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__QC_For_Group_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Group Booking</label>
    <type>Checkbox</type>
</CustomField>