force-app/main/default/objects/sugati__HE_Question_Categories__c/fields/sugati__QC_No_Of_Questions__c.field-meta.xml
<CustomField>
    <fullName>sugati__QC_No_Of_Questions__c</fullName>
    <label>No Of Questions</label>
    <summaryFilterItems>
        <field>sugati__Question__c.sugati__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Question__c.sugati__Q_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>