force-app/main/default/objects/sugati__HE_Question_Categories__c/fields/sugati__QC_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__QC_Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>