force-app/main/default/objects/sugati__HE_Question_Categories__c/fields/sugati__QC_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__QC_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday Enquiry</fullName>
            </value>
            <value>
                <fullName>Booking Form</fullName>
            </value>
            <value>
                <fullName>Site Page</fullName>
            </value>
            <value>
                <fullName>Tour Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>