force-app/main/default/objects/sugati__HE_Question_Categories__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__QC_Active__c</columns>
    <columns>sugati__QC_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>